# QoolUI4

./: .cmake-format.py  .gitignore  CMakeLists.txt  README.md  qool_qml_project_setup.cmake
QoolUI/: CMakeLists.txt
QoolUI/Qool/: BasicColorBehavior.qml  BasicLabel.qml  BasicNumberBehavior.qml  BasicTextBehavior.qml  CMakeLists.txt  CutCornerBox.qml  CutSizeBinding.qml  DelayTimer.qml  DragMoveArea.qml  DummyItem.qml  Floater.qml  ItemRelativePositioner.qml  OctagonExternalShapePath.qml  OctagonInternalShapePath.qml  OctagonRoundedExternalShapePath.qml  OctagonRoundedInternalShapePath.qml  OctagonRoundedShape.qml  OctagonShape.qml  PixelFont.qml  PositionLinker.qml  PositionLocker.qml  Qool.qml  QoolBox.qml  QoolConstants.qml  QoolPalette.qml  QoolRoundedBox.qml  QoolWindow.qml  QoolWindowBasic.qml  Qore.qml  myitem.cpp  myitem.h  qool_octagonshapehelper.cpp  qool_octagonshapehelper.h  qool_shapehelperbasic.cpp  qool_shapehelperbasic.h  qool_smartobj.cpp  qool_smartobj.h  qool_stylemanager.cpp  qool_stylemanager.h
QoolUI/Qool/_private/: OctagonRectangleShape.qml  QoolWindowBG.qml  QoolWindowCloseButton.qml  QoolWindowCloseButtonFace.qml  QoolWindowTitleItem.qml
QoolUI/Qool/datatypes/: qool_polar2d.cpp  qool_polar2d.h  qool_vector.cpp  qool_vector.h
QoolUI/Qool/shapehelper/: qool_abstractshapehelper.cpp  qool_abstractshapehelper.h  qool_octagoncontainmentmasker.cpp  qool_octagoncontainmentmasker.h  qool_octagonsettings.cpp  qool_octagonsettings.h  qool_octagonshapehelper.cpp  qool_octagonshapehelper.h  qool_qoolbox_settings.cpp  qool_qoolbox_settings.h  qool_qoolbox_shape_control.cpp  qool_qoolbox_shape_control.h  qool_shapehelper.cpp  qool_shapehelper.h
QoolUI/Qool/style/: qool_default_theme.cpp  qool_default_theme.h  qool_style.cpp  qool_style.h  qool_style_agent.cpp  qool_style_agent.h  qool_style_agent_group.cpp  qool_style_agent_group.h  qool_styledb.cpp  qool_styledb.h  qool_stylegroupagent.cpp  qool_stylegroupagent.h  qool_stylevaluegroup.cpp  qool_stylevaluegroup.h  qool_system_theme.cpp  qool_system_theme.h  qool_theme.cpp  qool_theme.h  qool_theme_database.cpp  qool_theme_database.h  qool_theme_package.cpp  qool_theme_package.h  qool_theme_values_support.h  qool_themevaluegroupagent.cpp  qool_themevaluegroupagent.h
QoolUI/Qool/utils/: qool_extension_positions.cpp  qool_extension_positions.h  qool_flags.h  qool_geoutils.cpp  qool_geoutils.h  qool_itemtracker.cpp  qool_itemtracker.h  qool_literals.h  qool_numberranger.cpp  qool_numberranger.h  qool_random_hsv_color_generator.cpp  qool_random_hsv_color_generator.h  qool_singleton.cpp  qool_singleton.h  qool_smartobj.cpp  qool_smartobj.h  qool_spacehelper.cpp  qool_spacehelper.h
QoolUI/QoolChat/: CMakeLists.txt  GlobalChatRoom.qml  qool_beeper.cpp  qool_beeper.h  qool_chatroom.cpp  qool_chatroom.h  qool_chatroom_manager.cpp  qool_chatroom_manager.h  qool_chatroom_server.cpp  qool_chatroom_server.h  qool_message.cpp  qool_message.h  qool_message_event.cpp  qool_message_event.h  qool_msgchannel.cpp  qool_msgchannel.h  qool_msgchannelset.cpp  qool_msgchannelset.h
QoolUI/QoolChat/apps/: qool_basicbeeperapp.cpp  qool_basicbeeperapp.h  qool_messagelogger.cpp  qool_messagelogger.h
QoolUI/QoolCommon/: CMakeLists.txt  qoolns.hpp
QoolUI/QoolCommon/interfaces/: qool_interface_themeloader.h
QoolUI/QoolCommon/public_headers/: qoolns.hpp
QoolUI/QoolCommon/qoolcommon/: _property_helper_macros.hpp  _property_helpers.hpp  bindable_property_macros_for_qobject.hpp  debug.hpp  default_variant_map.hpp  macro_foreach.hpp  macro_foreach_x.hpp  math.hpp  number_utils.hpp  numbers.hpp  plugin_loader.hpp  property_macros.hpp  property_macros_for_qgadget.hpp  property_macros_for_qobject.hpp  property_macros_for_qobject_declonly.hpp  qool_bindable_property.hpp  qool_common.h  qool_property.hpp  qoolns.hpp  qt_tools.hpp  simple_path_expander.hpp  singleton.hpp  std_tools.hpp
QoolUI/QoolControls/: ActionInstantiator.qml  BasicButton.qml  Button.qml  CMakeLists.txt  ClickableText.qml  ControlFrame.qml  ProgressBar.qml  QoolButton.qml  QoolControl.qml  ScrollBar.qml  ScrollIndicator.qml  SimpleButton.qml  SplitView.qml  ToolButton.qml
QoolUI/QoolControls/Components/: BasicButton.qml  (+20 more)
QoolUI/QoolDebug/: ActionButton.qml  CMakeLists.txt  ColorButton.qml  Floater.qml  NumberSlider.qml  OctagonShapeHud.qml  PointIndicator.qml  QoolWindowHud.qml  RectIndicator.qml
QoolUI/QoolDebugControls/: ActionButton.qml  CMakeLists.txt  ColorButton.qml  ColorSelector.qml  NumberSlider.qml  OctagonShapeHud.qml  PointIndicator.qml  QoolWindowHub.qml  RectIndicator.qml
QoolUI/QoolFile/: BasicFileInfoDisplay.qml  CMakeLists.txt  FilInfoViewToolBar.qml  FileDropArea.qml  FileDropper.qml  FileInfoDelegate.qml  FileInfoListControl.qml  FileInfoListView.qml  FileInfoListViewToolBar.qml  SimpleFileItem.qml  qool_fileicon_db.cpp  qool_fileicon_db.h  qool_fileicon_imageprovider.cpp  qool_fileicon_imageprovider.h  qool_fileinfo.cpp  qool_fileinfo.h  qool_fileinfo_db.cpp  qool_fileinfo_db.h  qool_fileinfolist_model.cpp  qool_fileinfolist_model.h  qool_filepathchecker.cpp  qool_filepathchecker.h  qool_fileplugin.cpp  qool_fileplugin.h  qool_urlchecker.cpp  qool_urlchecker.h
QoolUI/QoolModels/: CMakeLists.txt  qool_multirowselectionmodel.cpp  qool_multirowselectionmodel.h  qool_objectpropertylistmodel.cpp  qool_objectpropertylistmodel.h
QoolUI/includes/: qoolns.hpp.config  qoolversion.hpp.config
QoolUI/interfaces/: qool_interface_beeperapp.h  qool_interface_fileiconprovider.h  qool_interface_fileinfoprovider.h  qool_interface_test.h  qool_interface_themeloader.h
QoolUI/plugins/: CMakeLists.txt
QoolUIExample/: CMakeLists.txt  Main.qml  MainWindowToolBar.qml  PageFrame.qml  PageListModel.qml  PageListView.qml  main.cpp  toc.xml
QoolUIExample/i18n/: qml_en.ts  qml_en_US.ts  qml_zh.ts  qml_zh_CN.ts  qoolexample.en.ts  qoolexample.zh.ts  qoolexample_en_US.ts  qoolexample_zh_CN.ts
QoolUIExample/pages/: BasicPage.qml  OctagonShapeTestPage.qml  Page_Buttons.qml  Page_Playground.qml  Page_QoolBox.qml  Page_QoolFile.qml  Page_Welcome.qml  PaletteSheet.qml
(+95 files in other folders)
