set(QOOL_NS "qoolui")
set(QOOL_PLUGIN_DIR "qoolplugins")

set(QOOLUI_VERSION_MAJOR 4)
set(QOOLUI_VERSION_MINOR 0)
set(QOOLUI_VERSION_PATCH 0)

set(QOOLUI_VERSION_FULL ${QOOLUI_VERSION_MAJOR}.${QOOLUI_VERSION_MINOR}.${QOOLUI_VERSION_PATCH})
set(QOOLUI_VERSION_QML ${QOOLUI_VERSION_MAJOR}.${QOOLUI_VERSION_MINOR})

add_subdirectory(QoolCommon)

add_subdirectory(Qool)
add_subdirectory(QoolDebugControls)
